--- a/index.html
+++ b/index.html
@@ -154,9 +154,72 @@
                 <p id="result-water" class="result"></p>
             </form>
         </div>
-        <div class="storage-poll" id="storage-poll">3</div>
-        <div class="radio-poll" id="radio-poll">4</div>
-        <div class="storage-radio-poll" id="storage-radio-poll">5</div>
+        <div class="storage-poll" id="storage-poll">
+            <form class="storage-form" id="storage-form">
+                <p>Вкажіть тип відходу</p>
+                <select name="selectStorage" id="storagePoll">
+                    <option value="oblad">Обладнання та прилади, що містять ртуть, елементи з іонізуючим випромінюванням</option>
+                    <option value="lampa">Люмінесцентні лампи</option>
+                    <option value="inshe">Інше</option>
+                </select>
+                <br><br>
+                <p class="p-water">Вкажіть кількість</p>
+                <p class="p-water right">Оберіть місце розташування</p>
+                <br>
+                <input type="text" id="amount-things">
+                <select class="selectStorage" id="choose-place-storage">
+                    <option value="ploho">В межах населеного пункту або на відстані менш як 3 км від таких меж</option>
+                    <option value="terpimo">На відстані від 3 км і більше від меж населеного пункту</option>
+                </select>
+                <br><br>
+                <p class="p-water">Чи забезпечуюється повне виключення забруднення атмосферного повітря або водних об'єктів</p>
+                <input type="checkbox" id="isSafety">
+                <br><br>
+                <button class="btn btn-primary" id="rozrah-storage">Розрахувати</button>
+                <p id="result-storage" class="result"></p>
+            </form>
+        </div>
+        <div class="radio-poll" id="radio-poll">
+            <form class="radio-form" id="radio-form">
+                <p>Вкажіть тип ядерного палива</p>
+                <select name="selectRadio" id="radioPoll">
+                    <option value="visoko">Високоактивні</option>
+                    <option value="nizko">Середньоактивні та низькоактивні</option>
+                </select>
+                <br><br>
+                <p class="p-water">Вкажіть кількість кВт\год яку виробляєте</p>
+                <br>
+                <input type="text" id="amount-kvth">
+                <br><br>
+                <button class="btn btn-primary" id="rozrah-radio">Розрахувати</button>
+                <p id="result-radio" class="result"></p>
+            </form>
+        </div>
+        <div class="storage-radio-poll" id="storage-radio-poll">
+            <!-- <form class="storage-form" id="storage-form">
+                <p>Вкажіть тип відходу</p>
+                <select name="selectStorage" id="storagePoll">
+                    <option value="oblad">Обладнання та прилади, що містять ртуть, елементи з іонізуючим випромінюванням</option>
+                    <option value="lampa">Люмінесцентні лампи</option>
+                    <option value="inshe">Інше</option>
+                </select>
+                <br><br>
+                <p class="p-water">Вкажіть кількість</p>
+                <p class="p-water right">Оберіть місце розташування</p>
+                <br>
+                <input type="text" id="amount-things">
+                <select class="selectStorage" id="choose-place-storage">
+                    <option value="ploho">В межах населеного пункту або на відстані менш як 3 км від таких меж</option>
+                    <option value="terpimo">На відстані від 3 км і більше від меж населеного пункту</option>
+                </select>
+                <br><br>
+                <p class="p-water">Чи забезпечуюється повне виключення забруднення атмосферного повітря або водних об'єктів</p>
+                <input type="checkbox" id="isSafety">
+                <br><br>
+                <button class="btn btn-primary" id="rozrah-storage">Розрахувати</button>
+                <p id="result-storage" class="result"></p>
+            </form> -->
+        </div>
     </div>
     <script src="scrept.js"></script>
 </body>
