--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <h1>Екологічний моніторінг</h1>
+        <h2>Над лабораторною роботою працювали: Маркарян А.А., Шмойлов С.Р., Денис К.А.</h2>
         <h2>Лабораторна робота №2</h2>
         <table class="table table-sm table-bordered table-hover">
             <thead>
